[gd_scene load_steps=5 format=2]

[ext_resource path="res://slow_way/game_slow_way.gd" type="Script" id=1]
[ext_resource path="res://slow_way/bullet_hell_spawner_slow_way.tscn" type="PackedScene" id=2]
[ext_resource path="res://Detector.tscn" type="PackedScene" id=3]
[ext_resource path="res://perf_hud.tscn" type="PackedScene" id=4]

[node name="GameSlowWay" type="Node2D"]
script = ExtResource( 1 )

[node name="BulletHellpSpawnerSlowWay" parent="." instance=ExtResource( 2 )]
position = Vector2( 512, 300 )

[node name="Detector" parent="." instance=ExtResource( 3 )]
position = Vector2( 220, 170.164 )

[node name="Detector2" parent="." instance=ExtResource( 3 )]
position = Vector2( 516, 194.164 )

[node name="StartTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1

[node name="PerfHud" parent="." instance=ExtResource( 4 )]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
